--- a/page2.html
+++ b/page2.html
@@ -9,104 +9,78 @@
 </head>
 <body>
     
-<section class="language">
-    <h1 id="work-id">Get a good grip on a language</h1>
+<section class="languager1">
+    <h1 id="work-id">Get a good grip on any programming language</h1>
 
     <div id="third-col--flex">
 
         <div>
-            <a href="./page2.html" target="_blank" >
-                <img src="./images/language.jpg" alt="">
-                <p> <span> Get a grip on programming languages<br>
+            <a href="https://codeforwin.org/" >
+                <img src="./images/cprg.jpg" alt="">
+                <p> <span> A procedural language<br>
+                    A Structured Language<br>
+                    Embark on a thrilling coding adventure with C<br>
                     </span> 
-                    heloo this is thin
                 </p>
             </a>
         </div>
 
         <div>
-            <a href="./page2.html" target="_blank" >
-                <img src="./images/dsa.png" alt="">
-                <p> <span>9+ live sessions every month with <br>
-                    Well-structured interactive.<br>
+            <a href="https://cplusplus.com/" >
+                <img src="./images/c++prg.png" alt="">
+                <p> <span>An Object-Oriented language<br>
+                    A powerful and versatile programming language for building efficient and high-performance software solutions<br>
                     </span> 
-                    from seasoned industry <br>
-                    professionals.
                 </p>
             </a>
         </div>
 
         <div>
-            <a href="./page2.html" target="_blank" >
-                <img src="./images/git-github.jpg" alt="">
-                <p> <span>Placement guarantee <br></span> 
-                    with job- search support, referrals, and career <br>
-                    guidance from experienced career<br>
-                    coaches.
+            <a href="https://www.codecademy.com/learn/learn-java" >
+                <img src="./images/javaprg.jpg" alt="">
+                <p> <span>Pure Object-Oriented language<br>
+                    A versatile and widely-used programming language known for its portability, security, and extensive ecosystem of libraries and frameworks<br>
+                </span> 
+                    
                 </p>
             </a>
         </div>  
-        <div>
-            <a href="./page2.html" target="_blank" >
-                <img src="./images/git-github.jpg" alt="">
-                <p> <span>Placement guarantee <br></span> 
-                    with job- search support, referrals, and career <br>
-                    guidance from experienced career<br>
-                    coaches.
-                </p>
-            </a>
-        </div> 
 
     </div>
 </section>
 
-<section class="dsa">
-    <h1 id="work-id">Get a good grip on a language</h1>
-
+<section class="languager2">
     <div id="third-col--flex">
 
         <div>
-            <a href="./page2.html" target="_blank" >
-                <img src="./images/language.jpg" alt="">
-                <p> <span> Get a grip on programming languages<br>
+            <a href="https://corporatefinanceinstitute.com/course/data-science-and-machine-learning/"  >
+                <img src="./images/pythonprg.jpg" alt="">
+                <p> <span>High level object-oriented language<br>
+                    A versatile and beginner-friendly programming language known for its simplicity, readability, and vast range of applications, from web development to data analysis<br>
                     </span> 
-                    heloo this is thin
                 </p>
             </a>
         </div>
 
         <div>
-            <a href="./page2.html" target="_blank" >
-                <img src="./images/dsa.png" alt="">
-                <p> <span>9+ live sessions every month with <br>
-                    Well-structured interactive.<br>
+            <a href="https://www.freecodecamp.org/news/23-free-websites-to-learn-javascript/"  >
+                <img src="./images/jsprg.jpg" alt="">
+                <p> <span>Scripting Language<br>
+                    A dynamic and versatile programming language that powers interactivity on the web, enabling front-end development, server-side scripting, and more<br>
                     </span> 
-                    from seasoned industry <br>
-                    professionals.
                 </p>
             </a>
         </div>
 
         <div>
-            <a href="./page2.html" target="_blank" >
-                <img src="./images/git-github.jpg" alt="">
-                <p> <span>Placement guarantee <br></span> 
-                    with job- search support, referrals, and career <br>
-                    guidance from experienced career<br>
-                    coaches.
+            <a href="https://www.codecademy.com/learn/paths/php-skill"  >
+                <img src="./images/phpprg.jpg" alt="">
+                <p> <span>Sever-side Scripting Language<br>
+                    Widely used for web development, offering seamless integration with HTML and database systems for dynamic and interactive websites<br>
+                </span> 
                 </p>
             </a>
         </div>  
-        <div>
-            <a href="./page2.html" target="_blank" >
-                <img src="./images/git-github.jpg" alt="">
-                <p> <span>Placement guarantee <br></span> 
-                    with job- search support, referrals, and career <br>
-                    guidance from experienced career<br>
-                    coaches.
-                </p>
-            </a>
-        </div> 
 
     </div>
 </section>
